# microservices-demo

./: .gitignore  BUILD.bazel  WORKSPACE  jvm_dependencies.bzl  repositories.bzl
pb/: BUILD.bazel
src/adservice/src/main/java/hipstershop/: BUILD.bazel
src/adservice/src/main/proto/: BUILD.bazel
src/adservice/src/main/resources/: BUILD.bazel
src/cartservice/src/protos/: BUILD.bazel
src/checkoutservice/: BUILD.bazel
src/checkoutservice/genproto/: BUILD.bazel
src/checkoutservice/money/: BUILD.bazel
src/currencyservice/: BUILD.bazel
src/currencyservice/proto/: BUILD.bazel
src/emailservice/: BUILD.bazel  email_server.py  requirements.in  requirements.txt
src/emailservice/templates/: BUILD.bazel
src/frontend/: BUILD.bazel
src/frontend/genproto/: BUILD.bazel
src/frontend/money/: BUILD.bazel
src/frontend/static/: BUILD.bazel
src/paymentservice/: BUILD.bazel
src/paymentservice/proto/: BUILD.bazel
src/productcatalogservice/: BUILD.bazel
src/productcatalogservice/genproto/: BUILD.bazel
src/recommendationservice/: BUILD.bazel
src/shippingservice/: BUILD.bazel
src/shippingservice/genproto/: BUILD.bazel
