load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

gazelle(name = "gazelle")

pkg_tar(
    name = "grpc_health_probe_tar",
    srcs = ["@grpc_health_probe//file"],
    package_dir = "/bin",
)

container_image(
    name = "py3_base",
    base = "@python_bullseye//image",
    symlinks = {
        "/usr/bin/python": "/usr/local/bin/python",
        "/usr/bin/python3": "/usr/local/bin/python",
    },
    #base = "@py3_image_base//image",
    tars = [
        ":grpc_health_probe_tar",
    ],
    visibility = ["//visibility:public"],
)
