load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "checkoutservice_image",
    base = "@distroless_base//image",
    entrypoint = ["/checkoutservice"],
    files = [":checkoutservice"],
    repository = "gcr.io/cgrotz_test",
    visibility = ["//visibility:public"],
)

container_push(
    name = "checkoutservice_image_push",
    format = "Docker",
    image = ":checkoutservice_image",
    registry = "europe-docker.pkg.dev",
    repository = "swe-core-sandbox/microservice-demo/checkoutservice",
)

go_library(
    name = "checkoutservice_lib",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/microservices-demo/src/checkoutservice",
    visibility = ["//visibility:private"],
    deps = [
        "//src/checkoutservice/genproto",
        "//src/checkoutservice/money",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_profiler//:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//propagation:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_binary(
    name = "checkoutservice",
    embed = [":checkoutservice_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
