load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "shippingservice_lib",
    srcs = [
        "main.go",
        "quote.go",
        "tracker.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/microservices-demo/src/shippingservice",
    visibility = ["//visibility:private"],
    deps = [
        "//src/shippingservice/genproto",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_profiler//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "shippingservice",
    embed = [":shippingservice_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_test(
    name = "shippingservice_test",
    srcs = ["shippingservice_test.go"],
    embed = [":shippingservice_lib"],
    deps = [
        "//src/shippingservice/genproto",
        "@org_golang_x_net//context:go_default_library",
    ],
)

container_image(
    name = "shippingservice_image",
    base = "@distroless_base//image",
    entrypoint = ["/shippingservice"],
    files = [":shippingservice"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "shippingservice_image_push",
    format = "Docker",
    image = ":shippingservice_image",
    registry = "europe-docker.pkg.dev",
    repository = "swe-core-sandbox/microservice-demo/shippingservice",
)
