load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "money",
    srcs = ["money.go"],
    importpath = "github.com/GoogleCloudPlatform/microservices-demo/src/checkoutservice/money",
    visibility = ["//visibility:public"],
    deps = ["//src/checkoutservice/genproto"],
)

go_test(
    name = "money_test",
    srcs = ["money_test.go"],
    embed = [":money"],
    deps = ["//src/checkoutservice/genproto"],
)
